Admin DashBoard Module Updated

--- a/src/test/resources/Report/LoginAdminReport.html
+++ b/src/test/resources/Report/LoginAdminReport.html
@@ -32,10 +32,10 @@
 </ul>
 <ul class="nav-right">
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">DashboardAdminTest Module</span></a>
+<a href="#"><span class="badge badge-primary">LoginAdmin Module</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 17, 2025 06:10:12 pm</span></a>
+<a href="#"><span class="badge badge-primary">Dec 17, 2025 07:35:57 pm</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">tc_01</p>
             <p class="text-sm">
-              <span>6:10:22 pm</span> / <span>00:00:00:038</span>
+              <span>7:36:09 pm</span> / <span>00:00:00:038</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,8 +90,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">tc_01</h5>
-<span class='badge badge-success'>12.17.2025 6:10:22 pm</span>
-<span class='badge badge-danger'>12.17.2025 6:10:22 pm</span>
+<span class='badge badge-success'>12.17.2025 7:36:09 pm</span>
+<span class='badge badge-danger'>12.17.2025 7:36:09 pm</span>
 <span class='badge badge-default'>00:00:00:038</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>6:10:22 pm</td>
+        <td>7:36:09 pm</td>
         <td>
           Test Passed
         </td>
@@ -129,13 +129,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 17, 2025 06:10:12 pm</h3>
+<h3>Dec 17, 2025 07:35:57 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 17, 2025 06:10:23 pm</h3>
+<h3>Dec 17, 2025 07:36:09 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -221,7 +221,7 @@ var timeline = {
 </tr>
 <tr>
 <td>Module</td>
-<td>DashboardAdminTest</td>
+<td>LoginAdmin</td>
 </tr>
 <tr>
 <td>Browser</td>
